--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
   </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/ui/1.9.2/jquery-ui.js"></script> 
-<script src="assets/main.js"></script>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
