--- a/indexphotos.html
+++ b/indexphotos.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>COLLAGE</title>
-  <l<meta name="viewport" content="width=device=width, initial-scale=1">
+  <meta name="viewport" content="width=device=width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script src="https://use.fontawesome.com/be0dd1e218.js"></script>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/main.css">
+  
+  <link rel="stylesheet" type="text/css" href="assets/css/drop.css">
 </head>
 <body>
 
@@ -91,6 +91,6 @@
 
  </section>
 
-  <script src="js/main.js"></script>
+  <script src="assets/js/drop.js"></script>
 </body>
 </html>
