--- a/indexphotos.html
+++ b/indexphotos.html
@@ -53,7 +53,7 @@
    <div class="row">
       <div class="container">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-        <h2 class="photo">PHOTO BOOTH</h2>
+        <h2 class="photo">Imagenes</h2>
       </div>
       </div>
       </div>
@@ -61,11 +61,11 @@
   <div class="row">   
     <div class="container">
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-        <img id="foto1" draggable="true" ondragstart="drag(event)" src="https://www.google.cl/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwj31t6nz8HUAhXBI5AKHYF-C1oQjRwIBw&url=https%3A%2F%2Fes.pinterest.com%2Fpin%2F288793394832935288%2F&psig=AFQjCNGV3DF5W642EfpDTf2Lbuzsy_6I9A&ust=1497676883353084" alt="">
+        <img id="foto1" draggable="true" ondragstart="drag(event)" src="assets/img/shingeki/levi.jpg" alt="">
       </div>
 
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-        <img id="foto2" draggable="true" ondragstart="drag(event)" src="https://www.google.cl/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjAsuq5z8HUAhXOnJAKHdqTAD0QjRwIBw&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DljocB4rPieU&psig=AFQjCNGV3DF5W642EfpDTf2Lbuzsy_6I9A&ust=1497676883353084" alt="">
+        <img id="foto2" draggable="true" ondragstart="drag(event)" src="assets/img/58130bfb2c9d429a11cd4a24073eb02b.jpg" alt="">
       </div>
 
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
@@ -73,13 +73,13 @@
       </div>
 
        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-        <img id="foto4" draggable="true" ondragstart="drag(event)" src="https://www.google.cl/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjn0PGE0MHUAhUSlpAKHcuVBGsQjRwIBw&url=http%3A%2F%2Flajauladelolvido.blogspot.com%2F2013%2F10%2Fshingeki-no-kyojin-critica-anime.html&psig=AFQjCNE1vOAIfcjIxODz6o3cvH1ygbdCYg&ust=1497677064893085" alt="">
+        <img id="foto4" draggable="true" ondragstart="drag(event)" src="assets/img/hunter-x-hunter.jpg" alt="">
       </div>
        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-        <img id="foto5" draggable="true" ondragstart="drag(event)" src="https://www.google.cl/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwj9jMie0MHUAhUEHpAKHdeVCF8QjRwIBw&url=http%3A%2F%2Fwww.viralizalo.com%2Ffrikadas%2F5507-cuanto-sabes-de-attack-on-titan-shingeki-no-kyojin&psig=AFQjCNE1vOAIfcjIxODz6o3cvH1ygbdCYg&ust=1497677064893085" alt="">
+        <img id="foto5" draggable="true" ondragstart="drag(event)" src="assets/img/shingeki/shingeki-no-kyojin (1).jpg" alt="">
       </div>
        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-        <img id="foto6" draggable="true" ondragstart="drag(event)" src="https://www.google.cl/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwj4sYDA0MHUAhWElJAKHco8DjQQjRwIBw&url=https%3A%2F%2Flasaventurasdeerif.wordpress.com%2F2015%2F07%2F23%2Fpor-que-levi-no-saldra-en-el-live-action-de-shingeki-no-kyojin%2F&psig=AFQjCNEg2fb7rfTR3WPMJBvli_eZBrkD-w&ust=1497677203554580" alt="">
+        <img id="foto6" draggable="true" ondragstart="drag(event)" src="assets/img/shingeki/Shingeki-no-Kyojin.jpg" alt="">
       </div>
          
 
